Make it actually work
thanks lleyton

--- a/com.beeper.Beeper.desktop
+++ b/com.beeper.Beeper.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Beeper
 Comment=A Matrix-based instant messaging client
 Icon=com.beeper.Beeper
-Exec=/app/bin/beeper %U
+Exec=/app/bin/startbeeper %U
 Categories=Network;InstantMessaging;Chat;VideoConference;
 MimeType=x-scheme-handler/element;
 StartupWMClass=element
