Making the .desktop work
Uhhh icons not working yet

--- a/com.beeper.Beeper.yaml
+++ b/com.beeper.Beeper.yaml
@@ -55,6 +55,8 @@ modules:
       - ./beeper-3.76.15.AppImage --appimage-extract
       - mv squashfs-root /app/bin/beeper
       - install -D startbeeper -t /app/bin
+      - cp com.beeper.Beeper.png /app/share/icons/com.beeper.Beeper.png
+      - install -D com.beeper.Beeper.desktop -t /app/share/applications/
     sources:
       - type: script
         dest-filename: startbeeper
