Idk make it a lil better?
Unprofessionalism here we go

--- a/com.beeper.Beeper.yaml
+++ b/com.beeper.Beeper.yaml
@@ -58,6 +58,7 @@ modules:
       - install -D com.beeper.Beeper.png /app/share/icons/com.beeper.Beeper.png
       - install -D com.beeper.Beeper.desktop -t /app/share/applications/
       - install -D $FLATPAK_ID.metainfo.xml /app/share/metainfo/$FLATPAK_ID.appdata.xml
+      - rm -rf beeper-3.76.15.AppImage
     sources:
       - type: script
         dest-filename: startbeeper
