--- a/com.beeper.Beeper.yaml
+++ b/com.beeper.Beeper.yaml
@@ -60,8 +60,8 @@ modules:
       - mv squashfs-root /app/bin/beeper
       - install -D startbeeper -t /app/bin
       - install -Dm644 /app/bin/beeper/usr/share/icons/hicolor/256x256/apps/beeper.png /app/share/icons/hicolor/256x256/apps/${FLATPAK_ID}.png
-      - install -Dm644 com.beeper.Beeper.metainfo.xml /app/share/metainfo/com.beeper.Beeper.metainfo.xml
-      - install -Dm644 com.beeper.Beeper.desktop /app/share/applications/com.beeper.Beeper.desktop
+      - install -Dm644 com.beeper.Beeper.metainfo.xml /app/share/metainfo/${FLATPAK_ID}.metainfo.xml
+      - install -Dm644 com.beeper.Beeper.desktop /app/share/applications/${FLATPAK_ID}.desktop
     sources:
       - type: script
         dest-filename: download-appimage
